<resources>
    <string name="app_name">Lucky Monkey</string>
    <string name="back_to_menu">back to menu</string>
    <string name="winnings">Reward</string>
    <string name="balance">Balance</string>
    <string name="win_rate">Coefficient</string>
    <string name="collect">Collect</string>
    <string name="confirm">Confirm</string>
    <string name="game_over">Game Over!</string>
    <string name="play_again">Try Again</string>
    <string name="exit">Main menu</string>
    <string name="main_rule">Find the Character! The character is hiding behind one of those doors. If you found him, your win rate doubles! Withdraw your winnings or keep trying to find him! The amount of doors will increase every time you opening correct door.</string>
    <string name="exit_game">Exit Game</string>
    <string name="how_to_play">How to play?</string>
    <string name="start">New Game</string>
    <string name="settings">Settings</string>
    <string name="learn_more">About</string>
    <string name="reset_balance">Reset Balance</string>
    <string name="attempts">Lives left</string>
    <string name="rule_lives">You can make a mistake 2 times. You have total 3 lives, by losing third one - game ends, or you will get a chance to play bonus game. Win it and get 1 extra life</string>
    <string name="biggest_win">Biggest Win</string>
    <string name="rule_bonus_game">You lost, but you have a chance to continue playing. Win the bonus game to get an extra life. The rules of the bonus game are simple. You have 10 seconds to reach the finish line. To move, click as hard as you can</string>
    <string name="decline">Decline</string>
    <string name="click">Click!</string>
    <string name="start_bonus">Start</string>
    <string name="finish">Finish</string>
    <string name="_continue">Continue</string>
    <string name="bonus_win">Congratulations! Now you can continue playing or withdraw your reward!</string>
    <string name="scores">Scores</string>
    <string name="rps_game">The bonus game! The rules are the same as the rock paper scissors rules. Here you can see the diagram that shows us what beats what. If you win, reward doubles!</string>
    <string name="spin">Spin!</string>
</resources>