<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:background="@drawable/bg_main_gradient"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/threeSecondsTimer"
            style="@style/BasicText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@+id/tenSecondsTimer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="3" />

        <com.lucmon.keyk.library.library.CustomButton
            android:id="@+id/clickButton"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_text_first"
            style="@style/BasicText"
            android:paddingRight="5dp"
            android:textSize="20sp"
            android:text="@string/click"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:progress="100"
            android:max="1000"
            app:indicatorColor="#99000000"
            app:trackColor="#77FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/clickButton" />

        <TextView
            android:id="@+id/textView3"
            style="@style/BasicText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="6dp"
            android:paddingRight="5dp"
            android:text="@string/start_bonus"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/progress"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            style="@style/BasicText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="6dp"
            android:paddingRight="3dp"
            android:text="@string/finish"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/progress"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tenSecondsTimer"
            style="@style/BasicText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:paddingHorizontal="6dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/progress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="10" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>